--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "install": "^0.13.0",
+    "npm": "^8.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
+    "reactjs-popup": "^2.0.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
